--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tetris",
   "version": "1.0.0",
-  "description": "This code was written in 2013 (and moved into github in 2015)",
+  "description": "Tetris game madeby Stefan Kruijt",
   "main": " ",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,11 +16,14 @@
     "url": "https://github.com/stefankruijt/JSTetris/issues"
   },
   "homepage": "https://github.com/stefankruijt/JSTetris#readme",
-  "dependencies": {},
+  "dependencies": {
+    "phaser-ce": "2.8.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "webpack": "^1.13.2"
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-env": "1.5.1",
+    "babel-preset-es2015": "6.24.1",
+    "webpack": "2.6.1"
   }
 }
