--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Tetris game madeby Stefan Kruijt",
   "main": " ",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-js": "gulp build-js",
+    "build-html": "gulp build-html",
+    "build": "gulp clean-dest && gulp build-js && gulp build-html"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,18 @@
   "devDependencies": {
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
-    "babel-preset-env": "1.5.1",
+    "babel-preset-env": "1.5.2",
     "babel-preset-es2015": "6.24.1",
-    "webpack": "2.6.1"
+    "gulp": "3.9.1",
+    "gulp-clean": "0.3.2",
+    "gulp-htmlmin": "3.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-stats": "0.0.4",
+    "gulp-uglify": "3.0.0",
+    "webpack": "2.6.1",
+    "webpack-stream": "3.2.0"
   },
   "dependencies": {
-    "audio-player-es6": "^1.0.8"
+    "audio-player-es6": "1.0.8"
   }
 }
