--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-js": "gulp build-js",
     "build-html": "gulp build-html",
-    "build": "gulp clean-dest && gulp build-js && gulp build-html"
+    "build": "gulp clean-dest && gulp build-js && gulp build-html && gulp copy-sound"
   },
   "repository": {
     "type": "git",
