--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "gulp-clean": "0.3.2",
     "gulp-htmlmin": "3.0.0",
     "gulp-rename": "1.2.2",
+    "gulp-server-livereload": "1.9.2",
     "gulp-stats": "0.0.4",
     "gulp-uglify": "3.0.0",
+    "gulp-watch": "^4.3.11",
+    "run-sequence": "^1.2.2",
     "webpack": "2.6.1",
     "webpack-stream": "3.2.0"
   },
