--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tetris",
   "version": "1.0.0",
-  "description": "Tetris game madeby Stefan Kruijt",
+  "description": "JavaScript Tetris game",
   "main": " ",
   "scripts": {
-    "run-dev": "gulp default",
+    "dev": "gulp default",
     "build-js": "gulp build-js",
     "build-html": "gulp build-html",
     "build": "gulp clean-dest && gulp build-js && gulp build-html && gulp copy-sound"
@@ -20,21 +20,21 @@
   },
   "homepage": "https://github.com/stefankruijt/JSTetris#readme",
   "devDependencies": {
-    "babel-core": "6.24.1",
-    "babel-loader": "7.0.0",
-    "babel-preset-env": "1.5.2",
+    "babel-core": "6.26.3",
+    "babel-loader": "8.2.2",
+    "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
-    "gulp": "3.9.1",
-    "gulp-clean": "0.3.2",
-    "gulp-htmlmin": "3.0.0",
-    "gulp-rename": "1.2.2",
+    "gulp": "4.0.2",
+    "gulp-clean": "0.4.0",
+    "gulp-htmlmin": "5.0.1",
+    "gulp-rename": "2.0.0",
     "gulp-server-livereload": "1.9.2",
-    "gulp-stats": "0.0.4",
-    "gulp-uglify": "3.0.0",
-    "gulp-watch": "^4.3.11",
-    "run-sequence": "^1.2.2",
-    "webpack": "2.6.1",
-    "webpack-stream": "3.2.0"
+    "gulp-stats": "1.0.1",
+    "gulp-uglify": "3.0.2",
+    "gulp-watch": "^5.0.1",
+    "run-sequence": "^2.2.1",
+    "webpack": "5.9.0",
+    "webpack-stream": "6.1.1"
   },
   "dependencies": {
     "audio-player-es6": "1.0.8"
