--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "tetris",
   "version": "1.0.0",
-  "description": "JavaScript Tetris game",
+  "description": "JavaScript Tetris",
   "main": " ",
   "scripts": {
-    "dev": "gulp default",
-    "build-js": "gulp build-js",
-    "build-html": "gulp build-html",
-    "build": "gulp clean-dest && gulp build-js && gulp build-html && gulp copy-sound"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,21 +18,11 @@
   },
   "homepage": "https://github.com/stefankruijt/JSTetris#readme",
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "8.2.2",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "gulp": "4.0.2",
-    "gulp-clean": "0.4.0",
-    "gulp-htmlmin": "5.0.1",
-    "gulp-rename": "2.0.0",
-    "gulp-server-livereload": "1.9.2",
-    "gulp-stats": "1.0.1",
-    "gulp-uglify": "3.0.2",
-    "gulp-watch": "^5.0.1",
-    "run-sequence": "^2.2.1",
-    "webpack": "5.9.0",
-    "webpack-stream": "6.1.1"
+    "copy-webpack-plugin": "^6.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "audio-player-es6": "1.0.8"
