--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": " ",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "standard": "standard"
   },
   "repository": {
     "type": "git",
@@ -16,9 +17,10 @@
   },
   "homepage": "https://github.com/stefankruijt/JSTetris#readme",
   "devDependencies": {
-    "copy-webpack-plugin": "^6.3.2",
+    "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "webpack": "^5.9.0",
+    "standard": "^16.0.3",
+    "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
